<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.ProfilePhotoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_photo_icon"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_photo"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="12dp"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_message"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/textLight"
            android:layout_marginTop="4dp"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/add_a_photo"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btn_add_photo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/colorSecondary"
            android:id="@+id/tv_skip"
            android:layout_marginTop="12dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>