<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.ChangeUserNameFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:padding="16dp"
           android:id="@+id/ll_name_password_form"
           >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/change_username"
               android:layout_gravity="center"
               android:gravity="center"
               android:textStyle="bold"
               android:textSize="18sp"
               android:textColor="@color/textPrimary"
               android:textAllCaps="true"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/change_username_message"
               android:layout_gravity="center"
               android:gravity="center"
               android:textStyle="bold"
               android:textSize="14sp"
               android:textColor="@color/textLight"
               android:layout_marginTop="4dp"
               />


           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/et_username"
               android:background="@drawable/bg_custom_input"
               android:padding="16dp"
               android:hint="@string/full_name"
               android:inputType="text"
               android:textCursorDrawable="@null"
               android:textSize="14sp"
               android:layout_marginTop="22dp"
               android:text="username"
               />

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="16dp"
               android:text="@string/next"
               android:backgroundTint="@color/colorSecondary"
               android:textColor="@color/white"
               android:layout_marginTop="16dp"
               android:textAllCaps="false"
               android:textSize="14sp"
               android:id="@+id/btn_next"
               />

       </LinearLayout>


   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>