<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.NameAndPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:id="@+id/ll_name_password_form"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_and_password"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                android:textAllCaps="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_full_name"
                android:background="@drawable/bg_custom_input"
                android:padding="16dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:layout_marginTop="22dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:background="@drawable/bg_custom_input"
                android:padding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/continue_text"
                android:backgroundTint="@color/colorSecondary"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:id="@+id/btn_next"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>