<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.NewUserWelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll_main_container"
            app:layout_constraintBottom_toTopOf="@id/tv_policy_text"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_instagram"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                android:textAllCaps="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ritesh_khore15"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/textPrimary"
                android:id="@+id/tv_user_name"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/textLight"
                android:layout_marginTop="4dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/next"
                android:backgroundTint="@color/colorSecondary"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:id="@+id/btn_next"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_username"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@color/colorSecondary"
                android:id="@+id/tv_change_username"
                android:layout_marginTop="12dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_clicking_next_you_are_agree_to_our_terms_data_policy_and_cookies_policy"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/textLight"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tv_policy_text"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>