<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.LoginFragment"
    android:layout_gravity="center"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_border"
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/ll_form_login"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_text_logo"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email_address"
            android:background="@drawable/bg_custom_input"
            android:padding="16dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:background="@drawable/bg_custom_input"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/log_in"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            />

    </LinearLayout>

    <View
        android:id="@+id/view_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C3C3C3"
        app:layout_constraintBottom_toTopOf="@id/ll_login_action"
        app:layout_constraintTop_toBottomOf="@+id/ll_form_login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view_border"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ll_login_action"
        android:layout_marginTop="12dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/textLight"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:id="@+id/tv_sign_in"
            />

    </LinearLayout>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>