<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.ConfirmationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/ll_confirmation_form"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_confirmation_code"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter 6 digit code we have sent to abc@gmail.com"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/textLight"
                    android:id="@+id/tv_email_message"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_a_new_one"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/textPrimary"
                    android:id="@+id/tv_resend_otp"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_confirmation_code"
                    android:background="@drawable/bg_custom_input"
                    android:padding="16dp"
                    android:hint="@string/confirmation_code"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"
                    android:layout_marginTop="22dp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/next"
                    android:backgroundTint="@color/colorSecondary"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:id="@+id/btn_next"
                    />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C3C3C3"
            app:layout_constraintBottom_toTopOf="@id/ll_login_action"
            app:layout_constraintTop_toBottomOf="@id/ll_confirmation_form"
            android:layout_marginTop="12dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_border"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/ll_login_action"
            android:layout_marginTop="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/textLight"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:id="@+id/tv_sign_in"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>