<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.VerifyEmailFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_verify_mail"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_verification"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/textPrimary"
            android:textAllCaps="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_verify_email"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/textLight"
            android:layout_marginTop="4dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/verify"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btn_verify_email"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>