<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.auth.EmailInputFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp"
            android:id="@+id/ll_form_email"
            >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_profile_large_icon"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email_address"
            android:background="@drawable/bg_custom_input"
            android:padding="16dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            android:layout_marginTop="22dp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textLight"
            />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/next"
                android:backgroundTint="@color/colorSecondary"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:id="@+id/btn_next"
                />

        </LinearLayout>

        <View
            android:id="@+id/view_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C3C3C3"
            app:layout_constraintBottom_toTopOf="@id/ll_login_action"
            app:layout_constraintTop_toBottomOf="@+id/ll_form_email"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_border"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/ll_login_action"
            android:layout_marginTop="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/textLight"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:id="@+id/tv_log_in"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>